--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -2,3 +2,6 @@ version = "2.7.4"
 align.preset=most
 maxColumn = 200
 newlines.avoidForSimpleOverflow=[tooLong]
+rewrite.rules = [PreferCurlyFors]
+align.arrowEnumeratorGenerator = false
+newlines.beforeCurlyLambdaParams = multilineWithCaseOnly
