scalafmt: clean up redundant curly braces

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -5,3 +5,5 @@ newlines.avoidForSimpleOverflow=[tooLong]
 rewrite.rules = [PreferCurlyFors]
 align.arrowEnumeratorGenerator = false
 newlines.beforeCurlyLambdaParams = multilineWithCaseOnly
+rewrite.rules = [RedundantBraces]
+rewrite.redundantBraces.methodBodies = true
